[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Station.gd" type="Script" id=1]
[ext_resource path="res://Materials/GlowMat.tres" type="Material" id=2]
[ext_resource path="res://Sprites/station.png" type="Texture" id=3]
[ext_resource path="res://Sprites/explosion.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 6.82511

[node name="Station" type="Node2D"]
script = ExtResource( 1 )

[node name="StationSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1.6, 1 )
material = ExtResource( 2 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
modulate = Color( 1.8, 0.2, 0.2, 1 )
material = ExtResource( 2 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="MissileCooldown" type="Timer" parent="."]
wait_time = 0.25
[connection signal="area_entered" from="Area2D" to="." method="_on_collision"]
[connection signal="timeout" from="MissileCooldown" to="." method="_on_MissileCooldown_timeout"]
